<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FRC Scout</string>
    <string name="no_notes">Whoops, it looks like you haven\'t added any teams yet.</string>
    <string name="menu_insert">Add Team</string>
    <string name="menu_feature_request">Feature Request</string>
    <string name="menu_delete">Delete Team</string>
    <string name="name">Team Name</string>
    <string name="number">Team Number</string>
    <string name="gameplay">Gameplay</string>
    <string name="gameplay_shooting">Shooting</string>
    <string name="gameplay_climbing">Climbing</string>
    <string name="gameplay_defense">Defense</string>
    <string name="notes">Notes</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Team</string>
</resources>
